--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.dasein</groupId>
   <artifactId>dasein-cloud-test</artifactId>
-  <version>2013.02</version>
+  <version>2013.02.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>dasein-cloud-test</name>
