--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
   </licenses>
   
   <organization>
-    <name>enStratus Networks LLC</name>
-    <url>http://www.enstratus.com</url>
+    <name>enstratius, Inc.</name>
+    <url>http://www.enstratius.com</url>
   </organization>
 
     <scm>
@@ -119,8 +119,8 @@
                     <exclude>**/LICENSE-APACHE.txt</exclude>
                 </excludes>
                 <properties>
-                    <year>2009-2012</year>
-                    <copyrightHolder>enStratus Networks Inc</copyrightHolder>
+                    <year>2009-2013</year>
+                    <copyrightHolder>enstratius, Inc.</copyrightHolder>
                 </properties>
             </configuration>
         </plugin>
@@ -176,20 +176,20 @@
     <developer>
         <name>George Reese</name>
         <id>georgereese</id>
-        <email>george.reese -at- enstratus -dot- com</email>
-        <organization>enStratus</organization>
+        <email>george.reese -at- enstratius -dot- com</email>
+        <organization>enStratius</organization>
         <roles>
           <role>Java Developer</role>
           <role>PMC</role>
         </roles>
-        <url>http://www.enstratus.com</url>
+        <url>http://www.enstratius.com</url>
         <timezone>-6</timezone>
     </developer>  
     <developer>
         <name>Morgan Catlin</name>
         <id>sylistron</id>
         <email>morgan.catlin -at- valtira -dot- com</email>
-        <organization>enStratus</organization>
+        <organization>enStratius</organization>
         <roles>
           <role>Java Developer</role>
         </roles>
