--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
         <groupId>org.dasein</groupId>
         <artifactId>dasein-cloud-core</artifactId>
-        <version>2013.04-SNAPSHOT</version>
+        <version>2013.04</version>
         <scope>compile</scope>
         <optional>false</optional>
     </dependency>    
