--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,13 @@
         <version>1.2.17</version>
         <scope>compile</scope>
         <optional>false</optional>
-    </dependency>  
+    </dependency> 
+    <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20090211</version>
+          <scope>compile</scope>
+      </dependency> 
   </dependencies>
   
   <build>
@@ -96,6 +102,7 @@
           <configuration>
               <encoding>utf-8</encoding>
               <quiet>true</quiet>
+              <skip>true</skip>
               <links>
                   <link>http://java.sun.com/javase/6/docs/api/</link>
                   <link>http://java.sun.com/javaee/6/docs/api/</link>
