--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
   </licenses>
   
   <organization>
-    <name>Enstratius, Inc.</name>
-    <url>http://www.enstratius.com</url>
+    <name>Dell, Inc.</name>
+    <url>http://software.dell.com</url>
   </organization>
 
     <scm>
@@ -120,7 +120,7 @@
                 </excludes>
                 <properties>
                     <year>2009-2013</year>
-                    <copyrightHolder>Enstratius, Inc.</copyrightHolder>
+                    <copyrightHolder>Dell, Inc.</copyrightHolder>
                 </properties>
             </configuration>
         </plugin>
@@ -176,13 +176,13 @@
     <developer>
         <name>George Reese</name>
         <id>georgereese</id>
-        <email>george.reese -at- enstratius -dot- com</email>
-        <organization>enStratius</organization>
+        <email>george_reese -at- dell -dot- com</email>
+        <organization>Dell</organization>
         <roles>
           <role>Java Developer</role>
           <role>PMC</role>
         </roles>
-        <url>http://www.enstratius.com</url>
+        <url>http://software.dell.com</url>
         <timezone>-6</timezone>
     </developer>  
     <developer>
