--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (C) 2014 enStratus Networks Inc.
+  ~ Copyright (C) 2009-2014 Dell, Inc.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@
 
   <groupId>org.dasein</groupId>
   <artifactId>dasein-cloud-test</artifactId>
-  <version>2013.11-SNAPSHOT</version>
+  <version>2014.03-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>dasein-cloud-test</name>
@@ -59,7 +59,7 @@
     <dependency>
         <groupId>org.dasein</groupId>
         <artifactId>dasein-cloud-core</artifactId>
-        <version>2013.11-SNAPSHOT</version>
+        <version>2014.03-SNAPSHOT</version>
         <scope>compile</scope>
         <optional>false</optional>
     </dependency>    
@@ -146,7 +146,7 @@
                     <exclude>**/LICENSE-APACHE.txt</exclude>
                 </excludes>
                 <properties>
-                    <year>2009-2013</year>
+                    <year>2009-2014</year>
                     <copyrightHolder>Dell, Inc.</copyrightHolder>
                 </properties>
             </configuration>
