--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>org.dasein</groupId>
   <artifactId>dasein-cloud-test</artifactId>
-  <version>2014.03.3-SNAPSHOT</version>
+  <version>2014.03.2</version>
   <packaging>jar</packaging>
 
   <name>dasein-cloud-test</name>
