--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <version>4.9</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+      </dependency>
     <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
