[maven-release-plugin] prepare release dasein-cloud-test-2014.08.1

--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.dasein</groupId>
   <artifactId>dasein-cloud-test</artifactId>
-  <version>2014.07.1-SNAPSHOT</version>
+  <version>2014.08.1</version>
   <packaging>jar</packaging>
 
     <name>dasein-cloud-test</name>
@@ -60,7 +59,7 @@
     <dependency>
         <groupId>org.dasein</groupId>
         <artifactId>dasein-cloud-core</artifactId>
-        <version>2014.07.1-SNAPSHOT</version>
+        <version>2014.08.1</version>
         <scope>compile</scope>
         <optional>false</optional>
     </dependency>    
