--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (C) 2009-2014 Dell, Inc.
+  ~ Copyright (C) 2009-2015 Dell, Inc.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -59,7 +59,7 @@
     <dependency>
         <groupId>org.dasein</groupId>
         <artifactId>dasein-cloud-core</artifactId>
-        <version>2015.03.1-SNAPSHOT</version>
+        <version>2015.03.1</version>
         <scope>compile</scope>
         <optional>false</optional>
     </dependency>    
@@ -151,7 +151,7 @@
                     <exclude>**/LICENSE-APACHE.txt</exclude>
                 </excludes>
                 <properties>
-                    <year>2009-2014</year>
+                    <year>2009-2015</year>
                     <copyrightHolder>Dell, Inc.</copyrightHolder>
                 </properties>
             </configuration>
