--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,6 @@
         <groupId>org.dasein</groupId>
         <artifactId>dasein-cloud-core</artifactId>
         <version>2015.09.1-SNAPSHOT</version>
-        <scope>compile</scope>
-        <optional>false</optional>
     </dependency>    
     <dependency>
         <groupId>org.dasein</groupId>
@@ -108,14 +106,14 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.0.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>  
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.10.3</version>
           <executions>
               <execution>
                   <id>javadoc</id>
@@ -128,10 +126,16 @@
           <configuration>
               <encoding>utf-8</encoding>
               <quiet>true</quiet>
-              <links>
-                  <link>http://java.sun.com/javase/6/docs/api/</link>
-                  <link>http://java.sun.com/javaee/6/docs/api/</link>
-              </links>
+              <javaApiLinks>
+                  <property>
+                      <name>api_1.8</name>
+                      <value>http://download.java.net/jdk8/docs/api/</value>
+                  </property>
+                  <property>
+                      <name>dasein-utils</name>
+                      <value>http://www.dasein.org/api/dasein-utils/</value>
+                  </property>
+              </javaApiLinks>
               <stylesheetfile>dasein-javadoc.css</stylesheetfile>
               <footer />
           </configuration>
