--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.dasein</groupId>
     <artifactId>dasein-cloud-test</artifactId>
-    <version>2015.10.1</version>
+    <version>2015.10.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dasein-cloud-test</name>
